# xFELTOR

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: workflow.yml
examples/: animate1D.py  animate2D.py  animate_list.py  print_dataset.py
tests/: test_animate.py  test_load.py
xfeltor/: __init__.py  feltordataarray.py  feltordataset.py  load.py  plotting.py
