[metadata]
name = xfeltor
url = https://github.com/uit-cosmo/xFELTOR
author = Gregor Decristoforo
author_email = gregor.decristoforo@uit.no  
description = Collects FELTOR simulation data into xarray
license = MIT License
python_requires = >=3.9
long_description = file: README.md
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Visualization