[metadata]
name = xfeltor
url = https://github.com/uit-cosmo/xFELTOR
author = Gregor Decristoforo
author_email = gregor.decristoforo@uit.no  
description = Collects FELTOR simulation data into xarray
license = MIT License
python_requires >= 3.8
long_description = file: README.md
classifiers =
    Intended Audience :: Science/Research
    Intended Audience :: Education
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Visualization

[options]
setup_requires =
    setuptools>=58
install_requires =
    xarray>=0.18.0
    dask>=2021.8.1
    natsort>=7.1.1
    matplotlib>=3.4.3
    animatplot>=0.4.2
    netcdf4>=1.5.8
    Pillow>=8.4.0
include_package_data = True
packages = find:

[options.extras_require]
calc =
    numpy >= 1.21.1
    scipy >= 1.7.2
    dask >= 2021.8.1
docs = sphinx >= 1.4